--- a/contact.html
+++ b/contact.html
@@ -82,7 +82,7 @@
                         <button
                             type="submit"
                             class="w-full p-2 mt-1 text-[#23211E] bg-[#DAC5A7] hover:bg-[#50493F] hover:text-[#F4EBEB] rounded focus:outline-none">
-                            Submit
+                            Send Message
                         </button>
                     </div>
                 </form>
