--- a/index.html
+++ b/index.html
@@ -95,11 +95,11 @@
       </div>
       <!-- Carosol End -->
       <!-- Card Section Start -->
-      <section class="container mx-auto py-4 font-[2] px-8">
-        <div class="grid grid-cols-1 lg:grid-cols-3 gap-8">
+      <section class="container mx-auto py-4 font-[2] px-8 ">
+        <div class="grid grid-cols-1 lg:grid-cols-3 gap-8 ">
           <!-- Card 1: Web Design -->
           <div
-            class="bg-gray-800 p-6 border border-[#34312C] bg-stone-800/50 backdrop-blur-xl">
+            class="bg-gray-800 p-6 border border-[#34312C] bg-stone-800/50 backdrop-blur-xl z-50">
             <p class="font-[10]">01</p>
             <h3 class="text-xl font-semibold mb-4">Web Design</h3>
             <p class="text-[#EDD6B6] mb-4">
@@ -132,7 +132,7 @@
           </div>
           <!-- Card 2: Web Design -->
           <div
-            class="bg-gray-800 p-6 border border-[#34312C] bg-stone-800/50 backdrop-blur-xl">
+            class="bg-gray-800 p-6 border border-[#34312C] bg-stone-800/50 backdrop-blur-xl z-50">
             <p class="font-[10]">01</p>
             <h3 class="text-xl font-semibold mb-4">Web Design</h3>
             <p class="text-[#EDD6B6] mb-4">
@@ -165,7 +165,7 @@
           </div>
           <!-- Card 3: Web Design -->
           <div
-            class="bg-gray-800 p-6 border border-[#34312C] bg-stone-800/50 backdrop-blur-xl">
+            class="bg-gray-800 p-6 border border-[#34312C] bg-stone-800/50 backdrop-blur-xl z-50">
             <p class="font-[10]">01</p>
             <h3 class="text-xl font-semibold mb-4">Web Design</h3>
             <p class="text-[#EDD6B6] mb-4">
