about blog-details blog contact index work pages work-single services

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         <a href="index.html" class="text-[#EDD6B6] text-sm">Agun.</a>
         <a href="services.html" class="text-[#EDD6B6] text-sm">SERVICES</a>
         <a href="work.html" class="text-[#EDD6B6] text-sm">WORK</a>
-        <a href="#blog" class="text-[#EDD6B6] text-sm">BLOG</a>
-        <a href="#pages" class="text-[#EDD6B6] text-sm">PAGES</a>
+        <a href="blog.html" class="text-[#EDD6B6] text-sm">BLOG</a>
+        <a href="pages.html" class="text-[#EDD6B6] text-sm">PAGES</a>
         <a href="about.html" class="text-[#EDD6B6] text-sm">ABOUT</a>
         <a href="contact.html" class="border border-gray-100 bg-[#EDD6B6] text-black px-1 py-1 rounded-sm">Let’s TALK</a>
 
@@ -695,7 +695,7 @@
               <div class="flex justify-center">
                 <a
                   class="border bg-[#edd6b6] rounded-lg px-4 py-2 mt-6 text-black ">
-                  <button>GET IN TOUCH</button>
+                  <a href="contact.html"><button>GET IN TOUCH</button></a>
                   <i class="fa-solid fa-arrow-right-long m-2"></i>
                 </a>
               </div>
@@ -714,7 +714,7 @@
 
               <!-- Social Media Icons -->
               <div class="flex space-x-6 mb-4 md:mb-0">
-                <a href="#" aria-label="Instagram" class="hover:text-gray-400">
+                <a href="https://www.instagram.com/md_agun_sharker_shuvo?igsh=NGI0b2lzZm1tajFn" aria-label="Instagram" class="hover:text-gray-400">
                   <i class="fab fa-instagram text-3xl"></i>
                 </a>
                 <a href="#" aria-label="Twitter" class="hover:text-gray-400">
@@ -736,13 +736,13 @@
                 <ul class="space-y-2">
                   <li><a href="index.html"
                       class="text-[#edd6b6] hover:text-gray-400">Home</a></li>
-                  <li><a href="#"
+                  <li><a href="services.html"
                       class="text-[#edd6b6] hover:text-gray-400">Services</a></li>
                   <li><a href="about.html"
                       class="text-[#edd6b6] hover:text-gray-400">About</a></li>
-                  <li><a href="#"
+                  <li><a href="pages.html"
                       class="text-[#edd6b6] hover:text-gray-400">Pricing</a></li>
-                  <li><a href="#"
+                  <li><a href="contact.html"
                       class="text-[#edd6b6] hover:text-gray-400">Contact</a></li>
                 </ul>
               </div>
@@ -752,14 +752,14 @@
                 <ul class="space-y-2">
                   <li><a href="#"
                       class="text-[#edd6b6] hover:text-gray-400">CMS</a></li>
-                  <li><a href="#"
+                  <li><a href="work.html"
                       class="text-[#edd6b6] hover:text-gray-400">Work</a></li>
-                  <li><a href="#"
+                  <li><a href="work-single.html"
                       class="text-[#edd6b6] hover:text-gray-400">Work
                       Single</a></li>
-                  <li><a href="#"
+                  <li><a href="blog.html"
                       class="text-[#edd6b6] hover:text-gray-400">Blog</a></li>
-                  <li><a href="#"
+                  <li><a href="blog-details.html"
                       class="text-[#edd6b6] hover:text-gray-400">Blog
                       Single</a></li>
                 </ul>
