--- a/services.html
+++ b/services.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>Document</title>
+    <title>Services</title>
   </head>
   <body class="bg-[#0E0E0E]">
     <!-- Navigation -->
@@ -15,11 +15,11 @@
         </div>
         <div
           class="flex gap-4 px-2 py-2  bg-black bg-opacity-50 border border-gray-700 items-center backdrop-blur-3xl">
-          <a href="#index.html" class="text-[#EDD6B6] text-sm">Agun.</a>
+          <a href="index.html" class="text-[#EDD6B6] text-sm">Agun.</a>
           <a href="services.html" class="text-[#EDD6B6] text-sm">SERVICES</a>
           <a href="work.html" class="text-[#EDD6B6] text-sm">WORK</a>
-          <a href="#blog" class="text-[#EDD6B6] text-sm">BLOG</a>
-          <a href="#pages" class="text-[#EDD6B6] text-sm">PAGES</a>
+          <a href="blog.html" class="text-[#EDD6B6] text-sm">BLOG</a>
+          <a href="pages.html" class="text-[#EDD6B6] text-sm">PAGES</a>
           <a href="about.html" class="text-[#EDD6B6] text-sm">ABOUT</a>
           <a href="contact.html"
             class="border border-gray-100 bg-[#EDD6B6] text-black px-1 py-1 rounded-sm">Let’s
@@ -240,7 +240,7 @@
           <div class="flex justify-center">
             <a
               class="border bg-[#edd6b6] rounded-lg px-4 py-2 mt-6 text-black ">
-              <button>GET IN TOUCH</button>
+              <a href="contact.html"><button>GET IN TOUCH</button></a>
               <i class="fa-solid fa-arrow-right-long m-2"></i>
             </a>
           </div>
@@ -279,15 +279,15 @@
           <div>
             <h3 class="text-lg text-[#edd6b6] font-semibold mb-2">Pages</h3>
             <ul class="space-y-2">
-              <li><a href="#"
+              <li><a href="index.html"
                   class="text-[#edd6b6] hover:text-gray-400">Home</a></li>
-              <li><a href="#"
+              <li><a href="services.html"
                   class="text-[#edd6b6] hover:text-gray-400">Services</a></li>
-              <li><a href="#"
+              <li><a href="about.html"
                   class="text-[#edd6b6] hover:text-gray-400">About</a></li>
-              <li><a href="#"
+              <li><a href="pages.html"
                   class="text-[#edd6b6] hover:text-gray-400">Pricing</a></li>
-              <li><a href="#"
+              <li><a href="contact.html"
                   class="text-[#edd6b6] hover:text-gray-400">Contact</a></li>
             </ul>
           </div>
@@ -297,13 +297,13 @@
             <ul class="space-y-2">
               <li><a href="#"
                   class="text-[#edd6b6] hover:text-gray-400">CMS</a></li>
-              <li><a href="#"
+              <li><a href="work.html"
                   class="text-[#edd6b6] hover:text-gray-400">Work</a></li>
-              <li><a href="#" class="text-[#edd6b6] hover:text-gray-400">Work
+              <li><a href="work-single.html" class="text-[#edd6b6] hover:text-gray-400">Work
                   Single</a></li>
-              <li><a href="#"
+              <li><a href="blog.html"
                   class="text-[#edd6b6] hover:text-gray-400">Blog</a></li>
-              <li><a href="#" class="text-[#edd6b6] hover:text-gray-400">Blog
+              <li><a href="blog-details.html" class="text-[#edd6b6] hover:text-gray-400">Blog
                   Single</a></li>
             </ul>
           </div>
