--- a/work.html
+++ b/work.html
@@ -15,8 +15,8 @@
                 <a href="services.html"
                     class="text-[#EDD6B6] text-sm">SERVICES</a>
                 <a href="work.html" class="text-[#EDD6B6] text-sm">WORK</a>
-                <a href="#blog" class="text-[#EDD6B6] text-sm">BLOG</a>
-                <a href="#pages" class="text-[#EDD6B6] text-sm">PAGES</a>
+                <a href="blog.html" class="text-[#EDD6B6] text-sm">BLOG</a>
+                <a href="pages.html" class="text-[#EDD6B6] text-sm">PAGES</a>
                 <a href="about.html" class="text-[#EDD6B6] text-sm">ABOUT</a>
                 <a href="contact.html" class="border border-gray-100 bg-[#EDD6B6] text-black px-1 py-1 rounded-sm">Let's TALK</a>
             </div>
@@ -32,20 +32,20 @@
                 help bring your ideas to life.
             </p>
         </div>
-        <!--Web Name Start  -->
+        <!--Web Name End -->
         <!-- Work Start -->
         <div class="text-left-[20px] py-8">
             <div class="mx-24 w-24 h-1 bg-[#EDD6B6] mx-auto"></div>
             <div
                 class="flex flex-wrap justify-center gap-8 py-8 px-20 bg-black">
-                <img src="img/a.jpg" alt="An illustrative graphic 1"
-                    class="w-[500px] h-[400px] rounded-lg border border-gray-800 shadow-md">
-                <img src="img/b.jpg" alt="An illustrative graphic 2"
-                    class="w-[500px] h-[400px] rounded-lg border border-gray-800 shadow-md">
-                <img src="img/c.jpg" alt="An illustrative graphic 3"
-                    class="w-[500px] h-[400px] rounded-lg border border-gray-800 shadow-md">
-                <img src="img/d.jpg" alt="An illustrative graphic 4"
-                    class="w-[500px] h-[400px] border border-gray-800 rounded-lg shadow-md">
+                <a href="work-single.html"><img src="img/a.jpg" alt="work.html"
+                    class="w-[500px] h-[400px] rounded-lg border border-gray-800 shadow-md"></a>
+                <a href="work-single.html"><img src="img/b.jpg" alt="work.html"
+                    class="w-[500px] h-[400px] rounded-lg border border-gray-800 shadow-md"></a>
+                <a href="work-single.html"><img src="img/c.jpg" alt="work.html"
+                    class="w-[500px] h-[400px] rounded-lg border border-gray-800 shadow-md"></a>
+                <a href="work-single.html"><img src="img/d.jpg" alt="work.html"
+                    class="w-[500px] h-[400px] rounded-lg border border-gray-800 shadow-md"></a>   
             </div>
         </div>
         <!-- Work End -->
@@ -112,7 +112,7 @@
                     <div class="flex justify-center">
                         <a
                             class="border bg-[#edd6b6] rounded-lg px-4 py-2 mt-6 text-black ">
-                            <button>GET IN TOUCH</button>
+                            <a href="contact.html"><button>GET IN TOUCH</button></a>
                             <i class="fa-solid fa-arrow-right-long m-2"></i>
                         </a>
                     </div>
@@ -158,13 +158,13 @@
                         <ul class="space-y-2">
                             <li><a href="index.html"
                                     class="text-[#edd6b6] hover:text-gray-400">Home</a></li>
-                            <li><a href="#"
+                            <li><a href="services.html"
                                     class="text-[#edd6b6] hover:text-gray-400">Services</a></li>
                             <li><a href="about.html"
                                     class="text-[#edd6b6] hover:text-gray-400">About</a></li>
-                            <li><a href="#"
+                            <li><a href="pages.html"
                                     class="text-[#edd6b6] hover:text-gray-400">Pricing</a></li>
-                            <li><a href="#"
+                            <li><a href="contact.html"
                                     class="text-[#edd6b6] hover:text-gray-400">Contact</a></li>
                         </ul>
                     </div>
