blog-details-1 blog-details-2 blog-details-3 blog-details-4 blog-details-5 blog-details-6

--- a/Blog-Details/blog-details-5.html
+++ b/Blog-Details/blog-details-5.html
@@ -26,11 +26,8 @@
     <!-- Navbar End -->
     <!-- Hero Section Start -->
     <div class>
-      <p class="text-6xl text-[#DAC5A7] text-center mt-32">How to Build a
-        Stunning Website <br>with Framer</p>
-      <p class="text-2xl text-[#DAC5A7] text-center mt-1">Learn how to
-        create an impressive website using Framer with<br>our
-        step-by-step guide.</p>
+      <p class="text-6xl text-[#DAC5A7] text-center mt-32">Why responsive web design is<br>critical for your business</p>
+      <p class="text-2xl text-[#DAC5A7] text-center mt-1">Responsive web design ensures your site looks great and<br>performs well on all devices.</p>
     </div>
     <!-- Hero Section End -->
     <!-- More Start -->
@@ -53,141 +50,51 @@
         class="bg-gray-800 w-[281px] p-4 border border-[#34312C] bg-stone-800/50 backdrop-blur-xl flex items-center gap-2">
         <div class="h-3 flex gap-[143px]">
           <p class="text-[#EDD6B6] text-xs mt-[-4px]">Date</p>
-          <p class="text-[#EDD6B6] text-xs mt-[-4px]">Jul 21,2024</p>
+          <p class="text-[#EDD6B6] text-xs mt-[-4px]">Jul 11,2024</p>
         </div>
       </div>
       <div
         class="bg-gray-800 w-[281px] p-4 border border-[#34312C] bg-stone-800/50 backdrop-blur-xl flex items-center gap-2">
         <div class="h-3 flex gap-[143px]">
-          <p class="text-[#EDD6B6] text-xs  mt-[-4px]">Date</p>
-          <p class="text-[#EDD6B6] text-xs mt-[-4px]">Jul 21,2024</p>
+          <p class="text-[#EDD6B6] text-xs  mt-[-4px]">Category</p>
+          <p class="text-[#EDD6B6] text-xs mt-[-4px]">Branding</p>
         </div>
       </div>
       <div
         class="bg-gray-800 w-[281px] p-4 border border-[#34312C] bg-stone-800/50 backdrop-blur-xl flex items-center gap-2">
         <div class="h-3 flex gap-[143px]">
-          <p class="text-[#EDD6B6] text-xs  mt-[-4px]">Date</p>
-          <p class="text-[#EDD6B6] text-xs mt-[-4px]">Jul 21,2024</p>
+          <p class="text-[#EDD6B6] text-xs  mt-[-4px]">Reading <Time></Time></p>
+          <p class="text-[#EDD6B6] text-xs mt-[-4px]">2 Min</p>
         </div>
       </div>
     </div>
     <!-- View Start -->
     <br>
-    <!-- My Details Start -->
+    <!-- Blog Details Start -->
+    <!-- Five Product -->
     <div class="ml-[110px]">
       <div class="ml-[213px] ">
-        <img class="border border-gray-800" src="img/blog 1.png" alt>
+        <img class="border border-gray-800" src="img/blog 5.png" alt>
         <div>
           <div class="mt-2 0">
-            <p class="text-6xl text-[#DAC5A7]">Understanding Framer's
-              Unique<br>Capabilities</p>
+            <p class="text-6xl text-[#DAC5A7]">Enhancing User Experience</p>
             <br>
-            <p class="text-sm text-[#DAC5A7] mr-[300px]">Framer combines design
-              and code to offer a unique platform for building interactive
-              websites. Unlike traditional design tools, Framer allows you to
-              create prototypes that look and function like real websites. This
-              capability is particularly beneficial for testing user
-              interactions and getting a feel for the final product before it's
-              fully developed. The platform's flexibility in integrating
-              animations, transitions, and responsive design ensures that your
-              website will not only be visually appealing but also highly
-              functional across different devices.</p>
+            <p class="text-sm text-[#DAC5A7] mr-[300px]">In today's digital era, responsive web design has become a fundamental aspect of any successful online presence. With an increasing number of users accessing websites from various devices, ensuring that your website offers a seamless experience across all platforms is crucial. Responsive web design automatically adjusts the layout and content of your website to fit the screen size and orientation of the device being used, providing an optimal viewing experience. This adaptability is not just a technical requirement but a vital component for maintaining user engagement and satisfaction.</p>
             <br>
-            <p class="text-sm text-[#DAC5A7] mr-[300px]">The first step in using
-              Framer is to familiarize yourself with its interface and features.
-              The tool's drag-and-drop functionality makes it accessible even
-              for those with minimal coding experience. However, for more
-              advanced customizations, understanding basic HTML, CSS, and
-              JavaScript can be beneficial. Framer's extensive library of
-              components and templates can help you kickstart your project,
-              allowing you to focus on creating a unique user experience.</p>
+            <p class="text-sm text-[#DAC5A7] mr-[300px]">The primary benefit of responsive web design is the enhancement of user experience. When visitors access a website that adapts seamlessly to their device, they are more likely to have a positive experience. A responsive design eliminates the need for users to zoom in and out or scroll horizontally, making navigation intuitive and straightforward. This ease of use can significantly reduce bounce rates and encourage visitors to spend more time exploring your site. A website that caters to the preferences of its users fosters a sense of trust and reliability, which can lead to increased conversions and customer loyalty.</p>
             <br>
-            <p class="text-xl text-[#DAC5A7]">Designing with User Experience in
-              Mind</p>
+            <p class="text-xl text-[#DAC5A7]">Boosting Search Engine Rankings</p>
             <br>
-            <p class="text-sm text-[#DAC5A7] mr-[300px]">A stunning website is
-              not just about aesthetics; it’s about creating an intuitive and
-              engaging user experience. Framer excels in this area by allowing
-              designers to create highly interactive prototypes. Start by
-              mapping out your website's structure and user flow. This planning
-              phase is crucial to ensure that your website is easy to navigate
-              and meets the needs of your target audience. Consider using
-              wireframes to outline the layout and hierarchy of your
-              content.</p>
+            <p class="text-sm text-[#DAC5A7] mr-[300px]">Another critical advantage of responsive web design is its impact on search engine rankings. Search engines like Google prioritize mobile-friendly websites in their search results, recognizing the importance of providing a positive user experience on all devices. A responsive website meets these criteria and is therefore more likely to rank higher in search engine results pages (SERPs). This improved visibility can drive more organic traffic to your site, increasing the chances of attracting potential customers. Moreover, maintaining a single URL for both desktop and mobile versions of your site simplifies SEO efforts and enhances your site's authority and credibility.</p>
             <br>
-            <p class="text-sm text-[#DAC5A7] mr-[300px]">Incorporate elements
-              such as intuitive navigation menus, clear calls-to-action, and
-              engaging multimedia. Framer's ability to animate elements can add
-              a dynamic touch to your design, making it more engaging. For
-              instance, you can use subtle animations to guide users' attention
-              to important sections or actions on the page. Testing these
-              interactions in the prototype phase ensures that they enhance the
-              user experience without being distracting.</p>
+            <p class="text-xl text-[#DAC5A7]">Cost-Effectiveness and Future-Proofing</p>
             <br>
-            <p class="text-xl text-[#DAC5A7]">Implementing Responsive Design</p>
-            <br>
-            <p class="text-sm text-[#DAC5A7] mr-[300px]">In today's digital age,
-              users access websites from a variety of devices with different
-              screen sizes. Ensuring that your website looks and functions well
-              on all these devices is critical. Framer makes it easy to
-              implement responsive design principles. Use Framer's layout tools
-              to create fluid grids and flexible images that adjust seamlessly
-              to different screen sizes. Previewing your design on various
-              devices within Framer can help you spot and fix any issues early
-              on.</p>
-            <br>
-            <p class="text-sm text-[#DAC5A7] mr-[300px]">Additionally, Framer
-              allows you to create breakpoints for different screen sizes. This
-              feature enables you to customize the appearance and functionality
-              of your website based on the device it’s viewed on. For example,
-              you might want to simplify navigation or reduce the number of
-              animations on smaller screens to improve performance and user
-              experience. By testing and refining these breakpoints, you can
-              ensure that your website provides a consistent and pleasant
-              experience for all users.</p>
-            <br>
-            <p class="text-xl text-[#DAC5A7]">Enhancing Visual Appeal</p>
-            <br>
-            <p class="text-sm text-[#DAC5A7] mr-[300px]">Visual appeal is a
-              significant factor in retaining users on your website. Framer
-              offers a range of tools to enhance your website’s aesthetic.
-              Utilize high-quality images, engaging videos, and a cohesive color
-              scheme to create a visually stunning website. Framer’s integration
-              with design tools like Sketch and Figma allows you to import
-              assets easily and maintain visual consistency throughout your
-              site.</p>
-            <br>
-            <p class="text-sm text-[#DAC5A7] mr-[300px]">Experiment with
-              different typography to find a style that complements your brand
-              identity. Framer’s ability to handle custom fonts and text
-              animations can add a unique touch to your design. Additionally,
-              consider the use of white space to create a clean and uncluttered
-              look. White space can help draw attention to important elements
-              and make your content more readable.</p>
-            <br>
-            <p class="text-xl text-[#DAC5A7]">Testing and Iteration</p>
-            <br>
-            <p class="text-sm text-[#DAC5A7] mr-[300px]">One of the strengths of
-              Framer is its ability to facilitate testing and iteration. Before
-              finalizing your website, it’s essential to test it thoroughly. Use
-              Framer’s interactive prototypes to gather feedback from real
-              users. This feedback can provide valuable insights into how users
-              interact with your site and highlight areas for improvement.
-              Iterate on your design based on this feedback to enhance usability
-              and performance.</p>
-            <br>
-            <p class="text-sm text-[#DAC5A7] mr-[300px]">Framer’s built-in
-              collaboration features allow you to share your prototypes with
-              team members and stakeholders easily. This collaborative approach
-              ensures that everyone is on the same page and can contribute to
-              refining the design. Continuous testing and iteration help you
-              create a polished final product that meets the needs of your users
-              and aligns with your business goals.</p>
+            <p class="text-sm text-[#DAC5A7] mr-[300px]">Investing in responsive web design is also a cost-effective strategy for businesses. Instead of creating separate versions of your website for different devices, a responsive design allows you to manage a single site that adapts to all platforms. This approach not only reduces development and maintenance costs but also ensures a consistent brand experience across devices. Additionally, as new devices with varying screen sizes and resolutions continue to emerge, a responsive website will be able to accommodate these changes without requiring significant adjustments. This future-proofing aspect ensures that your website remains relevant and functional in an ever-evolving digital landscape.</p>
           </div>
         </div>
       </div>
     </div>
-        <!-- My Details End -->
+    <!-- Blog Details End -->
         <!-- Clint Messsage Start -->
          <div class="ml-[320px]">
            <div class="bg-gray-800 p-6 w-[870px] h-[300px] mt-10 border border-[#34312C] bg-stone-800/50 backdrop-blur-xl rounded">
