--- a/blog.html
+++ b/blog.html
@@ -41,7 +41,7 @@
                 <!-- Card 1 Start -->
                 <div
                     class="bg-gray-800 p-6 border border-[#34312C] bg-stone-800/50 backdrop-blur-xl z-50">
-                    <a href="blog-details.html"><img src="img/blog 1.png"
+                    <a href="Blog-Details/blog-details-1.html"><img src="img/blog 1.png"
                             alt></a>
                     <p class="text-[#EDD6B6] ">Jul 29,2024</p>
                     <h3 class="text-[#EDD6B6] text-xl font-semibold mb-4">How To
@@ -57,9 +57,9 @@
                 <!-- Card 2 Start -->
                 <div
                     class="bg-gray-800 p-6 border border-[#34312C] bg-stone-800/50 backdrop-blur-xl">
-                    <a href="blog-details.html"><img src="img/blog 2.png"
+                    <a href="Blog-Details/blog-details-2.html"><img src="img/blog 2.png"
                             alt></a>
-                    <p class="text-[#EDD6B6] ">Jul 13,2024</p>
+                    <p class="text-[#EDD6B6] ">Jul 25,2024</p>
                     <h3 class="text-[#EDD6B6] text-xl font-semibold mb-4">10
                         Website Elements For Maximum User Eangagment.</h3>
                     <p class="text-[#EDD6B6] mb-4">
@@ -73,9 +73,9 @@
                 <!-- Card 3 Start -->
                 <div
                     class="bg-gray-800 p-6 border border-[#34312C] bg-stone-800/50 backdrop-blur-xl z-50">
-                    <a href="blog-details.html"><img src="img/blog 3.png"
+                    <a href="Blog-Details/blog-details-3.html"><img src="img/blog 3.png"
                             alt></a>
-                    <p class="text-[#EDD6B6] ">Jul 29,2024</p>
+                    <p class="text-[#EDD6B6] ">Jul 13,2024</p>
                     <h3 class="text-[#EDD6B6] text-xl font-semibold mb-4">The
                         Importance Of Contant In Driving Website Traffic.</h3>
                     <p class="text-[#EDD6B6] mb-4">
@@ -94,7 +94,7 @@
                    <!-- Card 4 Start -->
                     <div
                         class="bg-gray-800 p-6 border border-[#34312C] bg-stone-800/50 backdrop-blur-xl z-50">
-                        <a href="blog-details.html"><img src="img/blog 4.png"
+                        <a href="Blog-Details/blog-details-4.html"><img src="img/blog 4.png"
                                 alt></a>
                         <p class="text-[#EDD6B6] ">Jul 01,2024</p>
                         <h3
@@ -109,9 +109,9 @@
                     <!-- Card 5 Start -->
                     <div
                         class="bg-gray-800 p-6 border border-[#34312C] bg-stone-800/50 backdrop-blur-xl z-50">
-                        <a href="blog-details.html"><img src="img/blog 5.png"
+                        <a href="Blog-Details/blog-details-5.html"><img src="img/blog 5.png"
                                 alt></a>
-                        <p class="text-[#EDD6B6] ">Jul 11,2024</p>
+                        <p class="text-[#EDD6B6] ">Jun 11,2024</p>
                         <h3
                             class="text-[#EDD6B6] text-xl font-semibold mb-4">Why Responsive Web Design Is Critical For Your Buisness.</h3>
                         <p class="text-[#EDD6B6] mb-4">
@@ -124,9 +124,9 @@
                     <!-- Card 6 Start -->
                     <div
                     class="bg-gray-800 p-6 border border-[#34312C] bg-stone-800/50 backdrop-blur-xl z-50">
-                    <a href="blog-details.html"><img src="img/blog 5.png"
+                    <a href="Blog-Details/blog-details-6.html"><img src="img/blog 5.png"
                             alt></a>
-                    <p class="text-[#EDD6B6] ">Jul 20,2024</p>
+                    <p class="text-[#EDD6B6] ">Jun 20,2024</p>
                     <h3
                         class="text-[#EDD6B6] text-xl font-semibold mb-4">How To Write Contant That Ranks On Google.</h3>
                     <p class="text-[#EDD6B6] mb-4">
